fix: z-index dropdown, icône dark mode mobile, largeur thèmes vidéo, taille titre, image fond mobile

--- a/resources/sass/components/_buttons.scss
+++ b/resources/sass/components/_buttons.scss
@@ -62,6 +62,14 @@
         position: relative;
         margin-top: 6rem;
     }
+    @include mobile-only {
+        order: 2;
+        position: relative;
+        top: auto;
+        left: auto;
+        transform: none;
+        margin: 3rem auto;
+    }
 
     &:before {
         content: "";
