--- a/resources/sass/components/_header.scss
+++ b/resources/sass/components/_header.scss
@@ -2,7 +2,8 @@
     display: flex;
     margin-bottom: 2rem;
     align-items: center;
-    z-index: 10;
+    position: relative;
+    z-index: 100;
     justify-content: space-between;
     @include ipad2-only {
         display: none;
@@ -232,8 +233,10 @@
         background-color: transparent;
         border: transparent;
         background-image: url(/web-doc/images/icon-moon-white.svg);
-        background-position: top;
+        background-position: center;
         background-repeat: no-repeat;
+        background-size: contain;
+        display: block;
         width: 26px;
         height: 26px;
         cursor: pointer;
