--- a/resources/sass/layout/_general.scss
+++ b/resources/sass/layout/_general.scss
@@ -69,9 +69,9 @@
     }
 
     &__video {
-        font-size: 1.7rem !important;
+        font-size: 1.35rem !important;
         @include ipad-only {
-            font-size: 1.02rem !important;
+            font-size: 0.95rem !important;
         }
     }
 }
