--- a/resources/sass/layout/_single-theme.scss
+++ b/resources/sass/layout/_single-theme.scss
@@ -1,5 +1,9 @@
 .singleTheme {
     margin-top: 10rem;
+    @include mobile-only {
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 .header-theme {
